GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/IP_Agreement_Details__c.object-meta.xml
<CustomObject>
    <description>Details about the Institutional Partnerships agreement</description>
    <label>IP Agreement Details</label>
    <nameField>
        <displayFormat>IPA#-{0000000}</displayFormat>
        <label>IP Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Agreement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>