GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>IP_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>