GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment/Modification</fullName>
            </value>
            <value>
                <fullName>CMU – Signature Only</fullName>
            </value>
            <value>
                <fullName>Confidentiality (NDA/CDA/PIEA)</fullName>
            </value>
            <value>
                <fullName>Consortia/Membership</fullName>
            </value>
            <value>
                <fullName>Data Use (DUA)</fullName>
            </value>
            <value>
                <fullName>Educational Project/Exec Ed</fullName>
            </value>
            <value>
                <fullName>Equipment Loan/License</fullName>
            </value>
            <value>
                <fullName>FOIA</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Letter of Commitment/LOI/Teaming</fullName>
            </value>
            <value>
                <fullName>Master Agreement</fullName>
            </value>
            <value>
                <fullName>Material Transfer Agreement (MTA)</fullName>
            </value>
            <value>
                <fullName>Miscellaneous(External User Agreement/Right of Entry/Site Access)</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Sponsored Research</fullName>
            </value>
            <value>
                <fullName>Subcontract/Subaward/PSA (out)</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Visitors</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>