GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/Current_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Status__c</fullName>
    <label>Current Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Submission - Incomplete</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Negotiation Complete - Waiting for Department/PI</fullName>
            </value>
            <value>
                <fullName>Negotiation Complete - Waiting for Compliance/Other Impacted Units</fullName>
            </value>
            <value>
                <fullName>OSP Waiting for CMU signature</fullName>
            </value>
            <value>
                <fullName>OSP Waiting for signed copy from Sponsor/Subcontractor</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Early Center/Award Extension Processing</fullName>
            </value>
            <value>
                <fullName>EC – Initial Review</fullName>
            </value>
            <value>
                <fullName>EC – Initial Review Complete</fullName>
            </value>
            <value>
                <fullName>CTTEC</fullName>
                <isActive>false</isActive>
                <label>CTTEC</label>
            </value>
            <value>
                <fullName>OSP</fullName>
                <isActive>false</isActive>
                <label>OSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>