GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <label>Docket Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>