GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/Office_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Office_Responsible__c</fullName>
    <label>Office Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>CTTEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>