GoalTracker/force-app/main/default/objects/IP_Agreement_Details__c/fields/System_Id_Internal__c.field-meta.xml
<CustomField>
    <fullName>System_Id_Internal__c</fullName>
    <label>System Id (Internal)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OSP Activity Log/SharePoint</fullName>
            </value>
            <value>
                <fullName>SPARCS</fullName>
            </value>
            <value>
                <fullName>Contracts System/Docusign</fullName>
            </value>
            <value>
                <fullName>Wellspring</fullName>
            </value>
            <value>
                <fullName>FlintBox</fullName>
            </value>
            <value>
                <fullName>CTTEC – Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>